# Alpha-AI-Terminal

./: README.md  ignition.sh  package.json
frontend/: package-lock.json  package.json
shared_protos/: market_data.proto  sentiment_data.proto  technical_data.proto
tools/load_tester/: Cargo.toml  build.rs
